Fixed some alignment shit

--- a/style.css
+++ b/style.css
@@ -59,14 +59,14 @@ body {
 }
 
 .grid-item {
-  flex-basis: 100%;
-  display: grid;
+  /* flex-basis: 100%; */
+  display: flex;
+  flex-direction: column;
   /* border: 3px solid green; */
   background-color: Gray;
   border-radius: 5px;
   margin: 5px;
   padding: 5px;
-  display: grid;
   width: auto;
   overflow: scroll;
 }
@@ -74,11 +74,15 @@ body {
 .sections {
   justify-self: center;
   width: auto;
+  white-space: nowrap;
+  height: 100%;
 }
 
 .comments {
   justify-self: center;
   width: auto;
+  white-space: nowrap;
+  height: 100%;
 }
 
 .ui-parent {
@@ -94,6 +98,7 @@ body {
   width: auto;
   border: 5px;
   align-items: center;
+  
 }
 
 .ui-section > input {
